@@ -203,85 +203,6 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
-DECL|method|testRehash
-specifier|public
-name|void
-name|testRehash
-parameter_list|()
-throws|throws
-name|Exception
-block|{
-name|SentinelIntSet
-name|set
-init|=
-operator|new
-name|SentinelIntSet
-argument_list|(
-literal|3
-argument_list|,
-operator|-
-literal|1
-argument_list|)
-decl_stmt|;
-name|set
-operator|.
-name|put
-argument_list|(
-literal|1
-argument_list|)
-expr_stmt|;
-name|set
-operator|.
-name|find
-argument_list|(
-literal|99
-argument_list|)
-expr_stmt|;
-name|set
-operator|.
-name|put
-argument_list|(
-literal|2
-argument_list|)
-expr_stmt|;
-name|set
-operator|.
-name|find
-argument_list|(
-literal|99
-argument_list|)
-expr_stmt|;
-name|set
-operator|.
-name|put
-argument_list|(
-literal|3
-argument_list|)
-expr_stmt|;
-name|set
-operator|.
-name|find
-argument_list|(
-literal|99
-argument_list|)
-expr_stmt|;
-name|set
-operator|.
-name|put
-argument_list|(
-literal|4
-argument_list|)
-expr_stmt|;
-name|set
-operator|.
-name|find
-argument_list|(
-literal|99
-argument_list|)
-expr_stmt|;
-block|}
-annotation|@
-name|Test
 DECL|method|testRandom
 specifier|public
 name|void
